--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FFEB1B1B</color>
+    <color name="background">#FF121212</color>
+    <color name="grey">#FF373737</color>
 </resources>
