--- a/app/src/main/res/drawable/custom_edit_text_rounded.xml
+++ b/app/src/main/res/drawable/custom_edit_text_rounded.xml
@@ -3,15 +3,15 @@
 
     <item android:state_enabled="true" android:state_focused="true">
         <shape android:shape="rectangle">
-            <solid android:color="#373737" />
+            <solid android:color="@color/grey" />
             <corners android:radius="12dp" />
-            <stroke android:width="2dp" android:color="#eb1b1b" />
+            <stroke android:width="2dp" android:color="@color/red" />
         </shape>
     </item>
 
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
-            <solid android:color="#373737" />
+            <solid android:color="@color/grey" />
             <corners android:radius="12dp" />
         </shape>
     </item>
