--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/backGround"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#121212"
@@ -18,11 +18,12 @@
         android:text="@string/sign_up"
         android:textColor="@color/white"
         android:textSize="30sp"
-        app:layout_constraintEnd_toStartOf="@+id/loginButton"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toStartOf="@+id/orLoginButton"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/loginButton"
+        android:id="@+id/orLoginButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
@@ -96,7 +97,7 @@
         android:autofillHints="password" />
 
     <Button
-        android:id="@+id/SignUpButton"
+        android:id="@+id/signUpButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
