--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="red">#FFEB1B1B</color>
     <color name="background">#FF121212</color>
     <color name="grey">#FF373737</color>
+    <color name="light_grey">#FFBDBDBD</color>
 </resources>
