--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="background">#FF121212</color>
     <color name="grey">#FF373737</color>
     <color name="light_grey">#FFBDBDBD</color>
+    <color name="light_red">#FFF33C3C</color>
 </resources>
