--- a/app/src/main/res/layout/activity_goals1.xml
+++ b/app/src/main/res/layout/activity_goals1.xml
@@ -152,7 +152,7 @@
 
 
     <Button
-        android:id="@+id/next"
+        android:id="@+id/nextButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
