--- a/app/src/main/res/drawable/circular_progress_bar.xml
+++ b/app/src/main/res/drawable/circular_progress_bar.xml
@@ -3,9 +3,9 @@
         <shape
             android:shape="ring"
             android:innerRadiusRatio="3"
-            android:thicknessRatio="15"
+            android:thicknessRatio="10"
             android:useLevel="false">
-            <solid android:color="@color/grey" />
+            <solid android:color="@color/dark_grey" />
         </shape>
     </item>
     <item android:id="@android:id/progress">
@@ -15,7 +15,7 @@
             <shape
                 android:shape="ring"
                 android:innerRadiusRatio="3"
-                android:thicknessRatio="15"
+                android:thicknessRatio="10"
                 android:useLevel="true">
                 <solid android:color="@color/red" />
             </shape>
