--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -140,44 +140,53 @@
 
     <EditText
         android:id="@+id/search_box"
+        android:layout_width="411dp"
+        android:layout_height="50dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
+        android:background="@drawable/custom_edit_text_rounded"
+        android:hint="@string/search"
+        android:padding="15dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar"
-        android:layout_width="411dp"
-        android:layout_height="50dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="367dp"
-        android:hint="@string/search"
-        android:textColor="@color/white"
-        android:padding="15dp"
-        android:textColorHint="@color/white"
-        android:background="@drawable/custom_edit_text_rounded" />
+        app:layout_constraintTop_toBottomOf="@+id/progressBar" />
 
-    <ImageButton
-        android:id="@+id/imageButton2"
-        android:layout_width="92dp"
-        android:layout_height="97dp"
-        app:srcCompat="@drawable/chatbot"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="454dp" />
+    <TableRow
+        android:id="@+id/buttons"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
 
-    <ImageButton
-        android:id="@+id/imageButton3"
-        android:layout_width="107dp"
-        android:layout_height="95dp"
-        app:srcCompat="@drawable/intake"
-        tools:layout_editor_absoluteX="141dp"
-        tools:layout_editor_absoluteY="454dp" />
+        app:layout_constraintTop_toBottomOf="@+id/search_box">
 
-    <ImageButton
-        android:id="@+id/imageButton4"
-        android:layout_width="101dp"
-        android:layout_height="95dp"
-        app:srcCompat="@drawable/prem"
-        tools:layout_editor_absoluteX="276dp"
-        tools:layout_editor_absoluteY="454dp" />
+        <ImageButton
+            android:id="@+id/imageButton2"
+            android:layout_height="85dp"
+            android:layout_weight="0.3"
+            android:clickable="true"
+            android:focusable="true"
+            app:srcCompat="@drawable/chatbot_icon" />
+
+        <ImageButton
+            android:id="@+id/imageButton3"
+            android:layout_weight="0.3"
+            android:clickable="true"
+            android:focusable="true"
+            app:srcCompat="@drawable/ic_intake" />
+
+        <ImageButton
+            android:id="@+id/imageButton4"
+            android:layout_height="85dp"
+            android:layout_weight="0.3"
+            android:clickable="true"
+            android:focusable="true"
+            app:srcCompat="@drawable/ic_crown" />
+    </TableRow>
+    <include
+        android:id="@+id/nav_bar"
+        layout="@layout/activity_nav_bar"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
