--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="grey">#FF373737</color>
     <color name="light_grey">#FFBDBDBD</color>
     <color name="light_red">#FFF33C3C</color>
+    <color name="dark_grey">#FF2F2F2F</color>
 </resources>
