finished all screens. still  need to finish activities

--- a/app/src/main/res/layout/activity_goals2.xml
+++ b/app/src/main/res/layout/activity_goals2.xml
@@ -17,6 +17,7 @@
         android:paddingHorizontal="20dp">
 
         <TextView
+            android:id="@+id/backText"
             android:text="@string/back"
             android:textColor="@color/red"
             android:textSize="16sp"
