--- a/app/src/main/res/drawable/goals_tab_grey.xml
+++ b/app/src/main/res/drawable/goals_tab_grey.xml
@@ -1,17 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
-
     <solid android:color="@color/grey" />
-
-    <size
-        android:height="16dp"
-        android:width="80dp" />
-
-    <corners
-        android:bottomLeftRadius="8dp"
-        android:bottomRightRadius="8dp"
-        android:topLeftRadius="8dp"
-        android:topRightRadius="8dp" />
-
+    <size android:height="16dp" android:width="80dp" />
+    <corners android:radius="8dp" />
 </shape>
