--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="44dp"
         android:layout_marginEnd="32dp"
         android:text="@string/login"
-        android:textColor="#ffffff"
+        android:textColor="@color/white"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,8 +33,8 @@
         android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:padding="15dp"
-        android:textColor="#bdbdbd"
-        android:textColorHint="#bdbdbd"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:layout_marginTop="60dp"
         app:layout_constraintTop_toBottomOf="@+id/LoginTitle"
         tools:layout_editor_absoluteX="3dp"
@@ -53,8 +53,8 @@
         android:hint="@string/password"
         android:inputType="textPassword"
         android:padding="15dp"
-        android:textColor="#bdbdbd"
-        android:textColorHint="#bdbdbd"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         app:layout_constraintTop_toBottomOf="@+id/EmailAddress"
         tools:layout_editor_absoluteX="10dp" />
 
@@ -66,10 +66,10 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="200dp"
         android:layout_marginEnd="10dp"
-        android:backgroundTint="#eb1b1b"
+        android:backgroundTint="@color/red"
         android:paddingVertical="10dp"
         android:text="@string/login"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,14 +82,12 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
         android:layout_marginEnd="28dp"
-        android:backgroundTint="#121212"
         android:clickable="true"
         android:focusable="true"
         android:text="@string/sign_up"
-        android:textColor="#eb1b1b"
+        android:textColor="@color/red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:strokeColor="#eb1b1b"
         android:textSize="16sp"/>
 
     <TextView
@@ -97,16 +95,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:backgroundTint="#121212"
         android:clickable="true"
         android:focusable="true"
         android:text="@string/forgot_your_password"
-        android:textColor="#eb1b1b"
+        android:textColor="@color/red"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginButton"
-        app:strokeColor="#eb1b1b" />
+        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
