--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,181 +12,281 @@
         android:id="@+id/tableRow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="38dp"
         android:gravity="center_vertical"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="38dp">
+        android:paddingHorizontal="20dp"
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/profile"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.3"
             android:clickable="true"
+            android:contentDescription="@string/profile"
             android:focusable="true"
-            android:src="@drawable/profile"
-            android:textAlignment="viewStart"
-            android:textColor="@color/white"
-            android:textSize="16sp" />
+            android:src="@drawable/profile" />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
 
         <TextView
             android:id="@+id/homeText"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.3"
             android:text="@string/home"
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="40sp" />
+            android:textSize="40sp"
+            android:textStyle="bold" />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
 
         <ImageView
             android:id="@+id/notifications"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="0.3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:clickable="true"
+            android:contentDescription="@string/notification"
             android:focusable="true"
-            android:src="@drawable/bell"
+            android:src="@drawable/notification"
             android:textColor="@color/white" />
-
     </TableRow>
 
+    <EditText
+        android:id="@+id/searchBar"
+        android:layout_width="0dp"
+        android:layout_height="35dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="15dp"
+        android:autofillHints=""
+        android:background="@drawable/custom_edit_text_rounded"
+        android:drawableEnd="@drawable/ic_search"
+        android:hint="@string/search_for_near_by_gyms"
+        android:inputType="none"
+        android:paddingHorizontal="10dp"
+        android:textColor="#bdbdbd"
+        android:textColorHint="#bdbdbd"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tableRow"
+        tools:layout_editor_absoluteX="3dp"/>
+
+    <TableLayout
+        android:id="@+id/caloriesContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/custom_edit_text_rounded"
+        android:padding="20dp"
+        app:layout_constraintTop_toBottomOf="@id/searchBar">
+
+        <TableRow>
+
+            <TextView
+                android:id="@+id/calories"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/calories"
+                android:textColor="@color/white"
+                android:textSize="32sp"
+                android:textStyle="bold" />
+        </TableRow>
+
+        <TableRow
+            android:gravity="center"
+            android:paddingVertical="10dp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/flameText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:drawablePadding="5dp"
+                    android:text="@string/_16"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    app:drawableStartCompat="@drawable/ic_flame" />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp" />
+
+                <TextView
+                    android:id="@+id/waterText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:drawablePadding="5dp"
+                    android:text="@string/_0_6_4l"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    app:drawableStartCompat="@drawable/ic_water" />
+            </LinearLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:indeterminate="false"
+                    android:max="100"
+                    android:progress="70"
+                    android:progressDrawable="@drawable/circular_progress_bar"
+                    android:textAlignment="center"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/text_remaining"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/remainig_calories"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@+id/progressBar"
+                    app:layout_constraintCircle="@id/progressBar"
+                    app:layout_constraintEnd_toEndOf="@+id/progressBar"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/progressBar" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        </TableRow>
+    </TableLayout>
+
     <TextView
-        android:id="@+id/calories"
+        android:id="@+id/discover"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="@string/calories"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:text="@string/discover"
         android:textColor="@color/white"
         android:textSize="32sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tableRow"
-        android:layout_marginStart="10dp"/>
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_margin="10dp"
-        android:background="@color/grey"
-        android:indeterminate="false"
-        android:max="100"
-        android:progress="50"
-        android:progressDrawable="@drawable/circular_progress_bar"
-        android:textAlignment="center"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/calories" />
-
-    <TextView
-        android:id="@+id/text_remaining"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/remainig_calories"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
-        app:layout_constraintCircle="@id/progressBar"
-        app:layout_constraintEnd_toEndOf="@+id/progressBar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/progressBar" />
-
-    <ImageView
-        android:id="@+id/flameIcon"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
-        android:src="@drawable/ic_flame"
-        android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@id/waterIcon"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/progressBar"
-        app:layout_constraintTop_toTopOf="@id/progressBar"
-        tools:visibility="visible" />
-
-    <TextView
-        android:id="@+id/flameText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="16"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@id/flameIcon"
-        app:layout_constraintTop_toTopOf="@id/flameIcon"
-        android:layout_marginStart="8dp" />
-
-    <ImageView
-        android:id="@+id/waterIcon"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:src="@drawable/ic_water"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/progressBar"
-        app:layout_constraintTop_toBottomOf="@id/flameIcon" />
-
-    <TextView
-        android:id="@+id/waterText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0.6/4L"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@id/waterIcon"
-        app:layout_constraintTop_toTopOf="@id/waterIcon"
-        android:layout_marginStart="8dp"/>
-
-    <EditText
-        android:id="@+id/search_box"
-        android:layout_width="411dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="10dp"
-        android:background="@drawable/custom_edit_text_rounded"
-        android:hint="@string/search"
-        android:padding="15dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar" />
+        app:layout_constraintTop_toBottomOf="@+id/caloriesContainer" />
 
     <TableRow
         android:id="@+id/buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="10dp"
         android:gravity="center_vertical"
+        app:layout_constraintTop_toBottomOf="@+id/discover">
 
-        app:layout_constraintTop_toBottomOf="@+id/search_box">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical">
 
-        <ImageButton
-            android:id="@+id/imageButton2"
-            android:layout_height="85dp"
-            android:layout_weight="0.3"
-            android:clickable="true"
-            android:focusable="true"
-            app:srcCompat="@drawable/chatbot_icon" />
+            <ImageButton
+                android:id="@+id/chatBotButton"
+                android:layout_width="85dp"
+                android:layout_height="85dp"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/bg_button"
+                android:backgroundTint="@color/white"
+                android:clickable="true"
+                android:contentDescription="@string/chat_bot"
+                android:focusable="true"
+                app:srcCompat="@drawable/chatbot_icon" />
 
-        <ImageButton
-            android:id="@+id/imageButton3"
-            android:layout_weight="0.3"
-            android:clickable="true"
-            android:focusable="true"
-            app:srcCompat="@drawable/ic_intake" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/chatbot"
+                android:textColor="@color/white" />
+        </LinearLayout>
 
-        <ImageButton
-            android:id="@+id/imageButton4"
-            android:layout_height="85dp"
-            android:layout_weight="0.3"
-            android:clickable="true"
-            android:focusable="true"
-            app:srcCompat="@drawable/ic_crown" />
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageButton
+                android:id="@+id/waterIntake"
+                android:layout_width="85dp"
+                android:layout_height="85dp"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/bg_button"
+                android:backgroundTint="@color/white"
+                android:clickable="true"
+                android:contentDescription="@string/water_intake"
+                android:focusable="true"
+                app:srcCompat="@drawable/ic_intake" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/water_intake"
+                android:textColor="@color/white" />
+        </LinearLayout>
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageButton
+                android:id="@+id/premium_button"
+                android:layout_width="85dp"
+                android:layout_height="85dp"
+                android:layout_marginBottom="5dp"
+                android:background="@drawable/bg_button"
+                android:backgroundTint="@color/white"
+                android:clickable="true"
+                android:contentDescription="@string/upgrade_to_premium"
+                android:focusable="true"
+                app:srcCompat="@drawable/ic_crown" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/upgrade_to_npremium"
+                android:textColor="@color/white" />
+        </LinearLayout>
+
     </TableRow>
+
     <include
         android:id="@+id/nav_bar"
-        layout="@layout/activity_nav_bar"/>
+        layout="@layout/activity_nav_bar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
