--- a/app/src/main/res/layout/activity_item_video.xml
+++ b/app/src/main/res/layout/activity_item_video.xml
@@ -47,7 +47,8 @@
             android:id="@+id/videoTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/bicep_curls_dumbbell_and_barbell"
+            android:text="@string/bicep_curls_dumbbell_or_barbell"
+            android:textStyle="bold"
             android:background="@color/grey"
             android:textColor="@android:color/white"
             android:padding="8dp"
