--- a/app/src/main/res/layout/activity_goals3.xml
+++ b/app/src/main/res/layout/activity_goals3.xml
@@ -91,7 +91,7 @@
 
     <RadioGroup
         android:id="@+id/toggle"
-        android:layout_width="match_parent"
+        android:layout_width="390dp"
         android:layout_height="50dp"
         android:layout_marginTop="40dp"
         android:layout_marginHorizontal="40dp"
