--- a/app/src/main/res/layout/activity_nav_bar.xml
+++ b/app/src/main/res/layout/activity_nav_bar.xml
@@ -77,7 +77,7 @@
                 android:id="@+id/more_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/bg_button"
+                android:background="@drawable/icon_bg_deafult"
                 android:contentDescription="@string/more"
                 android:padding="16dp"
                 android:src="@drawable/ic_more" />
