Enaba's work final

--- a/app/src/main/res/layout/activity_add_workout.xml
+++ b/app/src/main/res/layout/activity_add_workout.xml
@@ -35,14 +35,14 @@
             app:boxBackgroundColor="@color/white"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">
 
-<!--            <AutoCompleteTextView-->
-<!--                android:id="@+id/muscle_selector"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:inputType="none"-->
-<!--                android:hint="@string/select_muscle"-->
-<!--                android:textColor="@color/black"-->
-<!--                android:searchResultHighlightColor="@color/red"/>-->
+            <AutoCompleteTextView
+                android:id="@+id/muscle_selector"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="none"
+                android:hint="@string/select_muscle"
+                android:textColor="@color/black"
+                android:searchResultHighlightColor="@color/red"/>
 
 
         </com.google.android.material.textfield.TextInputLayout>
