--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -41,7 +41,7 @@
             android:layout_weight="0.2"
             android:clickable="true"
             android:focusable="true"
-            android:text="@string/logout"
+            android:text=""
             android:textColor="@color/white"
             android:textSize="18sp" />
     </TableRow>
