--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -41,9 +41,10 @@
             android:layout_weight="0.2"
             android:clickable="true"
             android:focusable="true"
-            android:text=""
-            android:textColor="@color/white"
-            android:textSize="18sp" />
+            android:text="@string/logout"
+            android:textColor="@color/red"
+            android:textSize="18sp"
+            android:gravity="center"/>
     </TableRow>
 
     <ImageView
@@ -51,6 +52,7 @@
         android:layout_width="114dp"
         android:layout_height="125dp"
         android:layout_marginTop="50dp"
+        android:contentDescription="@string/profile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tableRow2"
