still working on home

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -47,7 +47,7 @@
         app:layout_constraintTop_toBottomOf="@+id/changePwText" />
 
     <EditText
-        android:id="@+id/EmailAddress"
+        android:id="@+id/emailAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:autofillHints="emailAddress"
@@ -77,6 +77,6 @@
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/EmailAddress" />
+        app:layout_constraintTop_toBottomOf="@+id/emailAddress" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
