--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -109,7 +109,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/flameText"
+                    android:id="@+id/streakText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
@@ -158,7 +158,7 @@
                     android:id="@+id/text_remaining"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/remainig_calories"
+                    android:text="@string/remaining_calories"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textSize="20sp"
