Added the implementation that updates the database

--- a/app/src/main/res/layout/activity_item_food_log.xml
+++ b/app/src/main/res/layout/activity_item_food_log.xml
@@ -42,7 +42,7 @@
             android:text="Calories" />
 
         <TextView
-            android:id="@+id/RemoveFood"
+            android:id="@+id/removeFood"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.25"
