--- a/app/src/main/res/layout/activity_meal_tracking.xml
+++ b/app/src/main/res/layout/activity_meal_tracking.xml
@@ -31,7 +31,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/title"
         android:layout_marginTop="16dp"
-        android:progress="50"
         android:progressDrawable="@drawable/progress_bar"
         android:progressTint="@color/red"
         android:progressBackgroundTint="@color/red"
@@ -49,7 +48,6 @@
         android:layout_marginTop="10dp"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:text="1200 Calories remaining"
         android:layout_below="@id/progressBar"
         android:layout_marginBottom="16dp" />
 
@@ -63,7 +61,6 @@
         android:layout_marginTop="10dp"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:text="450 mL Water remaining"
         android:layout_below="@id/progressBar"
         android:layout_marginBottom="16dp" />
 
@@ -105,7 +102,7 @@
 
     <EditText
         android:id="@+id/waterIntake"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:layout_marginEnd="8dp"
@@ -114,6 +111,7 @@
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         app:layout_constraintEnd_toStartOf="@id/addWaterButton"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/foodLogRecyclerView" />
 
     <Button
