--- a/app/src/main/res/layout/activity_item_video.xml
+++ b/app/src/main/res/layout/activity_item_video.xml
@@ -34,10 +34,12 @@
             app:layout_constraintTop_toTopOf="@id/videoThumbnail"
             app:layout_constraintBottom_toBottomOf="@id/videoThumbnail" />
 
-        <CheckBox
+        <com.google.android.material.checkbox.MaterialCheckBox
             android:id="@+id/selectCheckBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:checked="false"
+            android:buttonTint="@color/white"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:contentDescription="@string/select_video"
             app:layout_constraintEnd_toEndOf="parent"
