--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -88,6 +88,35 @@
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
+        android:id="@+id/premiumButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:paddingVertical="15dp"
+        android:text="@string/upgrade_to_premium"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:clickable="true"
+        android:focusable="true"
+        android:layout_marginHorizontal="10dp"
+        app:layout_constraintEnd_toEndOf="@id/divider1"
+        app:layout_constraintStart_toStartOf="@id/divider1"
+        app:layout_constraintTop_toBottomOf="@+id/divider3" />
+
+    <View
+        android:id="@+id/divider4"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="10dp"
+        android:background="#CCCCCC"
+        app:layout_constraintTop_toBottomOf="@+id/premiumButton"
+        android:layout_marginHorizontal="50dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <TextView
         android:id="@+id/settingsButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -103,10 +132,10 @@
         android:layout_marginHorizontal="10dp"
         app:layout_constraintEnd_toEndOf="@id/divider1"
         app:layout_constraintStart_toStartOf="@id/divider1"
-        app:layout_constraintTop_toBottomOf="@+id/divider3" />
+        app:layout_constraintTop_toBottomOf="@+id/divider4" />
 
     <View
-        android:id="@+id/divider4"
+        android:id="@+id/divider5"
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginTop="10dp"
