--- a/app/src/main/res/layout/activity_item_food.xml
+++ b/app/src/main/res/layout/activity_item_food.xml
@@ -32,7 +32,9 @@
         android:textColor="@color/white"
         android:layout_weight="1" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
+        android:backgroundTint="@color/red"
+        android:textColor="@color/white"
         android:id="@+id/addFoodButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
